--- a/composer.json
+++ b/composer.json
@@ -2,25 +2,26 @@
     "name": "kinerity/postcountrequirements",
     "type": "phpbb-extension",
     "description": "Post Count Requirements extension for phpBB",
-    "homepage": "https://www.acsyste.com",
-    "version": "0.0.1",
+    "homepage": "https://www.project-w.org",
+    "version": "1.0.0-RC1",
     "time": "2017-01-31",
     "license": "GPL-2.0",
     "authors": [
         {
             "name": "kinerity",
             "email": "kinerity@yahoo.com",
-            "homepage": "https://www.acsyste.com",
+            "homepage": "https://www.layer-3.org",
             "role": "Extension Developer"
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.4.0",
+        "composer/installers": "~1.0"
     },
     "extra": {
         "display-name": "Post Count Requirements",
         "soft-require": {
-            "phpbb/phpbb": ">=3.2.0,"
+            "phpbb/phpbb": ">=3.2.0,<3.3.0@dev"
         }
     }
 }
