--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "phpbb-extension",
     "description": "Post Count Requirements extension for phpBB",
     "homepage": "https://www.project-w.org",
-    "version": "1.0.0-RC1",
+    "version": "1.0.0",
     "time": "2017-01-31",
     "license": "GPL-2.0",
     "authors": [
