--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,18 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0.0",
+        "phpbb/phpbb": ">=3.2.0,<3.3.0@dev"
     },
     "extra": {
         "display-name": "Post Count Requirements",
         "soft-require": {
             "phpbb/phpbb": ">=3.2.0,<3.3.0@dev"
+        },
+        "version-check": {
+            "host": "www.phpbb.com",
+            "directory": "/customise/db/extension/post_count_requirements",
+            "filename": "version_check"
         }
     }
 }
